--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Application that uses Express to save, retrieve, and delete notes",
   "main": "taker.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node taker.js"
   },
   "repository": {
     "type": "git",
