--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "taker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node taker.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
